<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:id="@+id/linear_1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Label + text lastName -->
        <TextView
            android:id="@+id/label_lastName"
            android:text="@string/label_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/result_lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/label_lastName"
            android:layout_toEndOf="@+id/label_lastName"/>

        <!-- Label + text firstName -->
        <TextView
            android:id="@+id/label_firstName"
            android:text="@string/label_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_lastName"/>

        <TextView
            android:id="@+id/result_firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_lastName"
            android:layout_toRightOf="@+id/label_firstName"/>

        <!-- Label + text birthDay -->
        <TextView
            android:id="@+id/label_birthDay"
            android:text="@string/label_birthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_firstName"/>

        <TextView
            android:id="@+id/result_birthDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/label_birthDay"
            android:layout_below="@+id/result_firstName"/>

        <!-- Label + text birthCity -->
        <TextView
            android:id="@+id/label_birthCity"
            android:text="@string/label_birthCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_birthDay"/>

        <TextView
            android:id="@+id/result_birthCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/label_birthCity"
            android:layout_below="@+id/label_birthDay"/>

    </RelativeLayout>
</FrameLayout>